Changelog
=========

0.7 - Unreleased
----------------

* Added various options to the ``list`` command.
  [fschulze]

* Instead of the ``checkout`` script, there is now a ``develop`` script with
  various commands.
  [fschulze]

0.6 - 2009-03-24
----------------

* Added custom logging formatter for nicer output in the checkout script.
  [fschulze]

* Removed the '-e' option, regular expression matching is the default now.
  [fschulze]

* Made it possible to specify more than one regular expression without the
  need to use a pipe symbol and quotes.
  [fschulze]

* Added help text for the checkout script to pypi page.
  [fschulze]

* Add a warning to rerun buildout after checkout.
  [fschulze]

0.5 - 2009-03-23
----------------

* Make sure that the updated versions are actually used.
  [fschulze]

0.4 - 2009-03-22
----------------

* Fixed logging, which fixes the info message output.
  [fschulze]

* Skip checkout of existing packages.
  [fschulze]

0.3 - 2009-03-22
----------------

* Fixed source distribution by adding a MANIFEST.in.
  [fschulze]

* Added -e and -l options to checkout script.
  [fschulze]

0.2 - 2009-03-22
----------------

* Added ``auto-checkout`` option (only works with subversion at the moment).
  [fschulze]

* Added support for git.
  [fschulze]

* Throw error when trying to checkout unknown package.
  [fschulze]

* Fixed target directory for checkouts.
  [fschulze]

0.1 - 2009-03-19
----------------

* Initial release
