@@ -1,3 +1,4 @@
+import elementtree.ElementTree as etree
 import logging
 import os
 import subprocess
@@ -27,6 +28,19 @@ class WorkingCopies(object):
             logger.error(stderr)
             sys.exit(1)
 
+    def svn_matches(self, name, url):
+        path = os.path.join(self.sources_dir, name)
+        cmd = subprocess.Popen(["svn", "info", "--xml", path],
+                               stdout=subprocess.PIPE,
+                               stderr=subprocess.PIPE)
+        stdout, stderr = cmd.communicate()
+        if cmd.returncode != 0:
+            logger.error("Subversion info for '%s' failed." % name)
+            logger.error(stderr)
+            sys.exit(1)
+        info = etree.fromstring(stdout)
+        return (info.find('entry').find('url').text == url)
+
     def git_checkout(self, name, url):
         path = os.path.join(self.sources_dir, name)
         if os.path.exists(path):
@@ -42,14 +56,44 @@ class WorkingCopies(object):
             logger.error(stderr)
             sys.exit(1)
 
+    def git_matches(self, name, url):
+        path = os.path.join(self.sources_dir, name)
+        cmd = subprocess.Popen(["git", "remote", "-v", path],
+                               stdout=subprocess.PIPE,
+                               stderr=subprocess.PIPE)
+        stdout, stderr = cmd.communicate()
+        if cmd.returncode != 0:
+            logger.error("Getting remote for '%s' failed." % name)
+            logger.error(stderr)
+            sys.exit(1)
+        return (url in stdout)
+
     def checkout(self, packages):
         for name in packages:
             if name not in self.sources:
-                raise KeyError("Checkout failed. No source defined for '%s'." % name)
+                logger.error("Checkout failed. No source defined for '%s'." % name)
+                sys.exit(1)
             kind, url = self.sources[name]
-            if kind == 'svn':
-                self.svn_checkout(name, url)
-            elif kind == 'git':
-                self.git_checkout(name, url)
+            if kind=='svn':
+                path = os.path.join(self.sources_dir, name)
+                if os.path.exists(path):
+                    if self.svn_matches(name, url):
+                        logger.info("Skipped checkout of existing package '%s'." % name)
+                    else:
+                        logger.error("Checkout URL for existing package '%s' differs. Expected '%s'." % (name, url))
+                        sys.exit(1)
+                else:
+                    self.svn_checkout(name, url)
+            elif kind=='git':
+                path = os.path.join(self.sources_dir, name)
+                if os.path.exists(path):
+                    if self.git_matches(name, url):
+                        logger.info("Skipped checkout of existing package '%s'." % name)
+                    else:
+                        logger.error("Checkout URL for existing package '%s' differs. Expected '%s'." % (name, url))
+                        sys.exit(1)
+                else:
+                    self.git_checkout(name, url)
             else:
-                raise ValueError("Unknown repository type '%s'." % kind)
+                logger.error("Unknown repository type '%s'." % kind)
+                sys.exit(1)
